# weather_thingy_v3

./: .gdbinit  .gitignore  CMakeLists.txt  README.md  ble_battery.c  ble_battery.h  ble_bme280.c  ble_bme280.h  bme280.c  bme280.h  bme280_register_map.h  flash.sh  linker.ld  linker_nrf51.ld  linker_nrf52.ld  main.c  pre_debug.sh  toolchain.cmake  upload.jlink
config/ble_app_template_s130_pca10028/: nrf_drv_config.h
config/ble_app_template_s132_pca10040/: nrf_drv_config.h
debug/: msgs.c  msgs.h  my_debug.h
include/: ble_battery.h  ble_bme280.h  bme280.h
pca10028/s130/arm5_no_packs/_build/: nrf51422_xxac_s130.hex
pca10028/s130/ses/: Untitled Document  ble_app_template_s130_pca10028.emProject  ble_app_template_s130_pca10028.emSession
pca10028/s130/ses/Output/Debug/Exe/: nrf51422_xxac_s130.hex
pca10040/s132/arm5_no_packs/: ble_weather_thingy.uvoptx  ble_weather_thingy.uvprojx
pca10040/s132/arm5_no_packs/RTE/: RTE_Components.h
pca10040/s132/arm5_no_packs/_build/: nrf52832_xxaa_s132.hex
pca10040/s132/ses/: ble_app_template_s132_pca10040.emProject  ble_app_template_s132_pca10040.emSession
pca10040/s132/ses/Output/Debug/Exe/: nrf52832_xxaa_s132.hex
src/: ble_battery.c  ble_bme280.c  bme280.c
